完成该项目的扩展功能：新增了按照“标题”“描述”“状态”的模糊查询功能，并且实现了任务列表的按时间排序问题。同时优化了前端界面。经测试后暂无发现问题。第二阶段任务完成。